[gd_scene load_steps=10 format=1]

[ext_resource path="res://scripts/main.gd" type="Script" id=1]
[ext_resource path="res://art/starfield.png" type="Texture" id=2]
[ext_resource path="res://scenes/player.tscn" type="PackedScene" id=3]
[ext_resource path="res://audio/expl1.wav" type="Sample" id=4]
[ext_resource path="res://audio/expl2.wav" type="Sample" id=5]
[ext_resource path="res://audio/expl3.wav" type="Sample" id=6]
[ext_resource path="res://audio/SimpleBeat.ogg" type="AudioStream" id=7]
[ext_resource path="res://scenes/HUD.tscn" type="PackedScene" id=8]

[sub_resource type="SampleLibrary" id=1]

samples/expl1 = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 4 )
}
samples/expl2 = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 5 )
}
samples/expl3 = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 6 )
}

[node name="main" type="Node"]

process/pause_mode = 1
script/script = ExtResource( 1 )

[node name="background" type="Sprite" parent="."]

transform/scale = Vector2( 1.3, 1.3 )
texture = ExtResource( 2 )
centered = false

[node name="player" parent="." instance=ExtResource( 3 )]

transform/pos = Vector2( 512.862, 286.385 )

[node name="spawn_locations" type="Node" parent="."]

editor/display_folded = true

[node name="1" type="Position2D" parent="spawn_locations"]

transform/pos = Vector2( 50, 50 )

[node name="2" type="Position2D" parent="spawn_locations"]

transform/pos = Vector2( 512, 50 )

[node name="3" type="Position2D" parent="spawn_locations"]

transform/pos = Vector2( 974, 50 )

[node name="4" type="Position2D" parent="spawn_locations"]

transform/pos = Vector2( 974, 300 )

[node name="5" type="Position2D" parent="spawn_locations"]

transform/pos = Vector2( 974, 550 )

[node name="6" type="Position2D" parent="spawn_locations"]

transform/pos = Vector2( 512, 550 )

[node name="7" type="Position2D" parent="spawn_locations"]

transform/pos = Vector2( 50, 550 )

[node name="8" type="Position2D" parent="spawn_locations"]

transform/pos = Vector2( 50, 300 )

[node name="asteroid_container" type="Node" parent="."]

[node name="expl_sounds" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 1 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[node name="music" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 7 )
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="HUD" parent="." instance=ExtResource( 8 )]

[node name="restart_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 3.0
one_shot = true
autostart = false

[node name="enemy_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[connection signal="timeout" from="restart_timer" to="." method="_on_restart_timer_timeout"]

[connection signal="timeout" from="enemy_timer" to="." method="_on_enemy_timer_timeout"]


